[package]
name = "spng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.66"
# Parse command line args
clap = { version = "4.0.18", features = ["derive"]}
# Encoding algorithm
crc = "3.0.0"
env_logger = "0.9.1"
# Logging
log = "0.4.17"
